--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <body onload="checkCookies()">
-
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 <script>
 function checkCookies() {
     var text = "";
