body load message changed

--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body onload="checkCookies()">
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<body onload="myFunction()">
+
+<h1>Hello World!</h1>
+
 <script>
-function checkCookies() {
-    var text = "";
-
-    if (navigator.cookieEnabled == true) {
-       text = "Cookies are enabled.";
-    } else {
-        text = "Cookies are not enabled.";
-    }
-
-    document.getElementById("demo").innerHTML = text;
+function myFunction() {
+    alert("Surveyjana Sukinobhavanthu");
 }
 </script>
 </body>
