--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </video>
 <script>
 function myFunction() {
-    alert("Surveyjana Sukinobhavanthu");
+    #alert("Surveyjana Sukinobhavanthu");
     var video = document.getElementById("target_video");
     video.autoplay = true;
     video.load(); 
