--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
 <body onload="myFunction()">
 
-<h1>Hello World!</h1>
-<video id="target_video" width="420">
-  <source src="https://drive.google.com/drive/u/0/folders/1urptSJ3de__L5D_b_u4hUtTyDNfgHd0x" type="video/mp4">
-  <p>Your browser does not support HTML5 video.</p>
+<video id="myVideo" width="320" height="176" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML5 video.
 </video>
+
+<script>
+var vid = document.getElementById("myVideo");
+vid.onloadstart = function() {
+    alert("Starting to load video");
+};
+</script> 
+
+<p>Video courtesy of <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.</p>
+  
 <script>
 function myFunction() {
-    #alert("Surveyjana Sukinobhavanthu");
-    var video = document.getElementById("target_video");
-    video.autoplay = true;
-    video.load(); 
+    alert("Surveyjana Sukinobhavanthu");
 }
 </script>
+  
 </body>
 </html>
