--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ vid.onloadstart = function() {
 };
 </script> 
 
-<p>Video courtesy of <a href="https://drive.google.com/drive/u/0/folders/1urptSJ3de__L5D_b_u4hUtTyDNfgHd0x" target="_blank">Big Buck Bunny</a>.</p>
+<p>Video courtesy of <a href="https://drive.google.com/file/d/16ZW-gSOJi6hIqMBjaFm6bwww393M7a-R/view?usp=sharing" target="_blank">Big Buck Bunny</a>.</p>
   
 <script>
 function myFunction() {
