--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <body onload="myFunction()">
 
-<video id="myVideo" width="320" height="176" controls>
-  <source src="mov_bbb.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
-  Your browser does not support HTML5 video.
+<video controls="controls" autoplay="autoplay" loop="loop"
+width="233" height="147" poster="//www.cdn.com//video.png"
+preload="auto" title="Video">
+    <source src="https://drive.google.com/file/d/16ZW-gSOJi6hIqMBjaFm6bwww393M7a-R/view?usp=sharing" type="video/mp4"/>
+    <source src="https://drive.google.com/file/d/16ZW-gSOJi6hIqMBjaFm6bwww393M7a-R/view?usp=sharing" type="video/ogv"/>
+    <source src="https://drive.google.com/file/d/16ZW-gSOJi6hIqMBjaFm6bwww393M7a-R/view?usp=sharing" type="video/webm"/>
 </video>
 
 <script>
