--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ preload="auto" title="Video">
 
 <script>
 var vid = document.getElementById("myVideo");
-vid.onloadstart = function() {
-    alert("Starting to load video");
-};
+vid.autoplay = true;
+vid.load(); 
 </script> 
 
 <p>Video courtesy of <a href="https://drive.google.com/file/d/16ZW-gSOJi6hIqMBjaFm6bwww393M7a-R/view?usp=sharing" target="_blank">Big Buck Bunny</a>.</p>
