div code for video added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body onload="myFunction()">
-     
+<div class="video-wrapper" id="video_2">
+                  <!--<style>#videomain2{background: url(http://www.tamiu.edu/_files/images/webvideofall2017.jpg )no-repeat; position: relative; width: auto; width: 100%; height: auto; background-size: cover; display: block; height: 100%;}</style>-->
+                  <video autoplay="autoplay" id="videomain" loop="loop" muted="muted" preload="none" src="http://www.tamiu.edu/_files/videos/Graduation_Spring_18_Website.mp4">A video showcasing TAMIU during the holidays.
+                        </video>
+                 </div>  
 <script>
 function myFunction() {
     alert("Surveyjana Sukinobhavanthu");
