--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body onload="myFunction()">
-<div class="video-wrapper" id="video_2">
-                  <!--<style>#videomain2{background: url(http://www.tamiu.edu/_files/images/webvideofall2017.jpg )no-repeat; position: relative; width: auto; width: 100%; height: auto; background-size: cover; display: block; height: 100%;}</style>-->
-                  <video autoplay="autoplay" id="videomain" loop="loop" muted="muted" preload="none" src="https://drive.google.com/open?id=16ZW-gSOJi6hIqMBjaFm6bwww393M7a-R">A video showcasing TAMIU during the holidays.
-                        </video>
-                 </div>  
+ 
 <script>
 function myFunction() {
-    alert("Surveyjana Sukinobhavanthu");
+    <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" width="128" height="128">
+    <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" style="width:128px;height:128px;">
 }
 </script>
   
