--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+<style>
+img { 
+    width:100%; 
+}
+</style>
 <body onload="myFunction()">
- 
+
+ <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" width="128" height="128">
+ <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" style="width:128px;height:128px;">
+
 <script>
 function myFunction() {
-    <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" width="128" height="128">
-    <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" style="width:128px;height:128px;">
+    alert("Hi!");
 }
 </script>
   
