--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ img {
 </style>
 <body onload="myFunction()">
 
- <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" width="128" height="128">
- <img src="https://drive.google.com/file/d/0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4/view?usp=sharing" alt="HTML5 Icon" style="width:128px;height:128px;">
+ <img src="https://drive.google.com/open?id=0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4" alt="HTML5 Icon" width="128" height="128">
+ <img src="https://drive.google.com/open?id=0By4BPRSY91HlNFloRTFKZEhzV3dBNUFib0lUNkhFUGRHVVE4" alt="HTML5 Icon" style="width:128px;height:128px;">
 
 <script>
 function myFunction() {
