--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ img {
 </style>
 <body onload="myFunction()">
 
- <img src="/images/SrinuAnu-Best-1" alt="HTML5 Icon" width="128" height="128">
- <img src="/images/SrinuAnu-Best-1" alt="HTML5 Icon" style="width:128px;height:128px;">
+ <img src="/images/SrinuAnu-Best-1.jpg" alt="HTML5 Icon" width="128" height="128">
 
 <script>
 function myFunction() {
