--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ img {
 </style>
 <body onload="myFunction()">
 
- <img src="/images/SrinuAnu-Best-1.jpg" alt="HTML5 Icon" width="50" height="100">
+ <img src="/images/SrinuAnu-Best-1.jpg" alt="Sri weds Anu" width="30" height="100">
 
 <script>
 function myFunction() {
