--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 img { 
     width:12%; 
 }
+.header-site{
+   background: url(/images/SrinuAnu-Best-1.jpg);
+}
 </style>
 <body onload="myFunction()">
 
  <img src="/images/SrinuAnu-Best-1.jpg" alt="Sri weds Anu" width="50" height="100">
+
 
 <script>
 function myFunction() {
