--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ img {
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1>MYLOGO.COM</h1>
+<h1>Sri Wedding Invitation</h1>
 <hr>
 
 <h2>PORTFOLIO</h2>
@@ -22,28 +22,28 @@ img {
 <div class="row">
   <div class="column">
     <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
+      <img src="/images/SrinuAnu-Best-1.jpg" alt="Mountains" style="width:100%">
       <h3>My Work</h3>
       <p>Lorem ipsum..</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-      <img src="lights.jpg" alt="Lights" style="width:100%">
+      <img src="/images/SrinuAnu-Best.jpg" alt="Lights" style="width:100%">
       <h3>My Work</h3>
       <p>Lorem ipsum..</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-      <img src="nature.jpg" alt="Nature" style="width:100%">
+      <img src="/images/SrinuAnu-Best-1.jpg" alt="Nature" style="width:100%">
       <h3>My Work</h3>
       <p>Lorem ipsum..</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
+      <img src="/images/SrinuAnu-Best.jpg" alt="Mountains" style="width:100%">
       <h3>My Work</h3>
       <p>Lorem ipsum..</p>
     </div>
@@ -51,7 +51,7 @@ img {
 </div>
 
 <div class="content">
-  <img src="bear.jpg" alt="Bear" style="width:100%">
+  <img src="/images/SrinuAnu-Best-1.jpg" alt="Bear" style="width:100%">
   <h3>Some Other Work</h3>
   <p>Lorem ipsum..</p>
 </div>
