--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
-<style>
-img { 
-    width:12%; 
-}
-
-</style>
 <body onload="myFunction()">
 
- <img src="/images/SrinuAnu-Best-1.jpg" alt="Sri weds Anu" width="50" height="100">
+ <img src="/images/SrinuAnu-Good.jpg" alt="Sri weds Anu" style="width:15%">
 <!-- MAIN (Center website) -->
 <div class="main">
 
