--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body onload="myFunction()">
 
- <img src="/images/SrinuAnu-Good.jpg" alt="Sri weds Anu" style="width:15%">
+ <img src="/images/SrinuAnu-Good.png" alt="Sri weds Anu" style="width:15%">
 <!-- MAIN (Center website) -->
 <div class="main">
 
