--- a/index.html
+++ b/index.html
@@ -1,63 +1,107 @@
 <!DOCTYPE html>
 <html>
-<body onload="myFunction()">
 
- <img src="/images/SrinuAnu-Good.png" alt="Sri weds Anu" style="width:15%">
-<!-- MAIN (Center website) -->
-<div class="main">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
 
-<h1>Sri Wedding Invitation</h1>
-<hr>
+body {
+    margin: 0;
+    font-family: Arial;
+}
 
-<h2>PORTFOLIO</h2>
-<p>Resize the browser window to see the responsive effect.</p>
+/* The grid: Four equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
 
-<!-- Portfolio Gallery Grid -->
+/* Style the images inside the grid */
+.column img {
+    opacity: 0.8; 
+    cursor: pointer; 
+}
+
+.column img:hover {
+    opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* The expanding image container */
+.container {
+    position: relative;
+    display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    color: white;
+    font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+}
+</style>
+</head>
+<body>
+
+<div style="text-align:center">
+  <h2>Tabbed Image Gallery</h2>
+  <p>Click on the images below:</p>
+</div>
+
+<!-- The four columns -->
 <div class="row">
   <div class="column">
-    <div class="content">
-      <img src="/images/SrinuAnu-Best-1.jpg" alt="Mountains" style="width:15%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
+    <img src="img_nature.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <div class="content">
-      <img src="/images/SrinuAnu-Best.jpg" alt="Lights" style="width:20%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
+    <img src="img_snow.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <div class="content">
-      <img src="/images/SrinuAnu-Best-1.jpg" alt="Nature" style="width:25%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
+    <img src="img_mountains.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <div class="content">
-      <img src="/images/SrinuAnu-Best.jpg" alt="Mountains" style="width:30%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
+    <img src="img_lights.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
-<div class="content">
-  <img src="/images/SrinuAnu-Best-1.jpg" alt="Bear" style="width:35%">
-  <h3>Some Other Work</h3>
-  <p>Lorem ipsum..</p>
-</div>
-
-<!-- END MAIN -->
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
 </div>
 
 <script>
-function myFunction() {
-    alert("Sri Welcomes You!");
+function myFunction(imgs) {
+    var expandImg = document.getElementById("expandedImg");
+    var imgText = document.getElementById("imgtext");
+    expandImg.src = imgs.src;
+    imgText.innerHTML = imgs.alt;
+    expandImg.parentElement.style.display = "block";
 }
 </script>
-  
+
+ 
 </body>
 </html>
