--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@ body {
 <!-- The four columns -->
 <div class="row">
   <div class="column">
-    <img src="SrinuAnu-Best-1.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Best-1.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="SrinuAnu-Best.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Best.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="SrinuAnu-Best-1.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-StickerFeel.png" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="SrinuAnu-Best.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Weds.png" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
