--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ body {
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <p>Click on the images below:</p>
+    <img src="/images/SrinuAnu-Best-1.jpg" alt="Nature" style="width:20%">
 </div>
 
 <!-- The four columns -->
@@ -79,10 +80,10 @@ body {
     <img src="/images/SrinuAnu-Best.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/SrinuAnu-StickerFeel.png" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Best.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/SrinuAnu-Weds.png" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Best-1.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
