--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <p>Click on the images below:</p>
-    <img src="/images/SrinuAnu-Best-1.jpg" alt="Nature" style="width:20%">
+    <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:5%">
 </div>
 
 <!-- The four columns -->
