--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
-  <p>Click on the images below:</p>
+  <p>"Surveyjana Sukinobavanthu"</p>
     <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:30%">
 </div>
 
