--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <p>"Surveyjana Sukinobavanthu"</p>
-    <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:30%">
+    <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:27%">
 </div>
 
 <!-- The four columns -->
@@ -80,10 +80,10 @@ body {
     <img src="/images/SrinuAnu-Best.jpg" alt="Snow" style="width:20%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/SrinuAnu-Best.jpg" alt="Mountains" style="width:20%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Best-1.jpg" alt="Mountains" style="width:20%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/SrinuAnu-Best-1.jpg" alt="Lights" style="width:20%" onclick="myFunction(this);">
+    <img src="/images/SrinuAnu-Best.jpg" alt="Lights" style="width:20%" onclick="myFunction(this);">
   </div>
 </div>
 
