--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-    float: center;
+    float: left;
     width: 25%;
-    padding: 10px;
+    padding: 50px;
 }
 
 /* Style the images inside the grid */
