--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-    float: left;
+    float: right;
     width: 25%;
     padding: 50px;
 }
@@ -67,8 +67,8 @@ body {
 
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
+  <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:27%">
   <p>"Surveyjana Sukinobavanthu"</p>
-    <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:27%">
 </div>
 
 <!-- The four columns -->
