--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-    float: right;
+    float: left;
     width: 25%;
     padding: 50px;
 }
