--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ body {
 </div>
 <!-- The video -->
 <video autoplay muted loop id="myVideo">
-  <source src="rain.mp4" type="video/mp4">
+  <source src="/images/GodsVideo.vob" type="video/vob">
 </video>
 
 <!-- Optional: some overlay text to describe the video -->
