--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {font-family: Verdana, sans-serif;}
 .month {
     padding: 10px 25px;
     width: 100%;
-    background: #1abc9c;
+    background: #000000;
     text-align: center;
 }
 
