--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {font-family: Verdana, sans-serif;}
 }
 </style>
 </head>
-<body background="/images/SrinuAnu-Best-1.jpg">
+<body background="/images/bg5.jpg">
 
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
