--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@ body {font-family: Verdana, sans-serif;}
 }
 </style>
 </head>
-<body background="/images/bg6.jpg">
+<body background="/images/bg1.jpg">
 
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <p>"Surveyjana Sukinobavanthu"</p>
-  <img src="/images/SrinuAnu-Good1.png" alt="Nature" style="width:27%">
+  <img src="/images/SrinuAnu-Good1.jpg" alt="Nature" style="width:27%">
 </div>
 
 
