--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 body {
     margin: 0;
     font-family: Arial;
+    background-image: url(/images/bg7.jpg);
+    background-repeat:no-repeat;
+    background-position:center; 
 }
 
 /* The grid: Four equal columns that floats next to each other */
@@ -153,7 +156,7 @@ body {font-family: Verdana, sans-serif;}
 }
 </style>
 </head>
-<body background="/images/bg7.jpg">
+<body>
 
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
