--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body {
     background-image: url(/images/bg7.jpg);
     background-repeat:no-repeat;
     background-position:center; 
+    background-size: cover;
 }
 
 /* The grid: Four equal columns that floats next to each other */
