--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@ body {font-family: Verdana, sans-serif;}
 <!-- The four columns -->
 <div class="row">
   <div class="column">
-    <img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">
+    <p>.</p>
+    <!--<img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">-->
   </div>
   <div class="column">
     <img src="/images/SrinuAnu-Best.jpg" alt="Snow" style="width:20%" onclick="myFunction(this);">
@@ -178,7 +179,8 @@ body {font-family: Verdana, sans-serif;}
     <img src="/images/SrinuAnu-Best-1.jpg" alt="Mountains" style="width:20%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/Sri.jfif" alt="Lights" style="width:20%" onclick="myFunction(this);">
+    <p>.</p>
+    <!--<img src="/images/Sri.jfif" alt="Lights" style="width:20%" onclick="myFunction(this);">-->
   </div>
 </div>
     
