--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 
 /* The expanding image container */
 .container {
-    position: relative;
+    position: middle;
     display: none;
 }
 
