--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ body {
 
 /* The expanding image container */
 .container {
-    position: relative;
+    position: center;
     display: none;
     align-items: center;
+    justify-content: center;
 }
 
 /* Expanding image text */
