--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ body {
     position: center;
     display: none;
     align-items: center;
-    justify-content: center;
+    justify-content: center;.
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Expanding image text */
