--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@ body {
 
 /* The expanding image container */
 .container {
-    position: center;
+    position: relative;
     display: none;
-    align-items: center;
-    justify-content: center;.
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /* Expanding image text */
@@ -188,7 +184,7 @@ body {font-family: Verdana, sans-serif;}
     
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:50%">
+  <img id="expandedImg" style="width:50%" aligned="center">
   <div id="imgtext"></div>
 </div>
     
