--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ body {
 /* The expanding image container */
 .container {
     position: relative;
-    display: none;
+    display: flex;
+    justify-content: center;
 }
 
 /* Expanding image text */
@@ -184,7 +185,7 @@ body {font-family: Verdana, sans-serif;}
     
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:99%" aligned="center">
+  <img id="expandedImg" style="width:100%">
   <div id="imgtext"></div>
 </div>
     
