--- a/index.html
+++ b/index.html
@@ -197,18 +197,19 @@ body {font-family: Verdana, sans-serif;}
     <li>
       August<br>
       <span style="font-size:18px">2018</span>
+      <span style="font-size:10px">07:00 PM IST</span>
     </li>
   </ul>
 </div>
 
 <ul class="weekdays">
-  <li>Mo</li>
-  <li>Tu</li>
-  <li>We</li>
-  <li>Th</li>
-  <li>Fr</li>
-  <li>Sa</li>
-  <li>Su</li>
+  <li>MON</li>
+  <li>TUE</li>
+  <li>WED</li>
+  <li>THU</li>
+  <li>FRI</li>
+  <li>SAT</li>
+  <li>SUN</li>
 </ul>
 
 <ul class="days">
