--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ body {font-family: Verdana, sans-serif;}
     <li class="next">&#10095;</li>
     <li>
       August<br>
-      <span style="font-size:18px">2018</span>
-      <span style="font-size:10px">07:00 PM IST</span>
+      <span style="font-size:18px">2018</span> <br>
+      <span style="font-size:9px">07:00 PM IST</span>
     </li>
   </ul>
 </div>
