--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 * {
     box-sizing: border-box;
 }
-
+.MainHeader {
+    background: url(/images/bg2.jpg);
+}
 body {
     margin: 0;
     font-family: Arial;
