--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 * {
     box-sizing: border-box;
 }
-.MainHeader {
-    background: url(/images/bg2.jpg);
+header {
+    background-image: url(/images/bg2.jpg);
 }
 body {
     margin: 0;
