--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head >
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<div id="header"></div>
 <style>
 * {
     box-sizing: border-box;
 }
-header {
-    background-image: url(/images/bg2.jpg);
+#header {
+  background: black url(/images/bg2.jpg) center no-repeat;
 }
 body {
     margin: 0;
