--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body {font-family: Verdana, sans-serif;}
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <p>"Surveyjana Sukinobavanthu"</p>
-  <img src="/images/SrinuAnu-StickerFeel.png" alt="Nature" style="width:25%">
+  <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
 </div>
 <!-- The four columns -->
 <div class="row">
