--- a/index.html
+++ b/index.html
@@ -195,9 +195,12 @@ body {font-family: Verdana, sans-serif;}
     <li class="prev">&#10094;</li>
     <li class="next">&#10095;</li>
     <li>
-      August<br>
-      <span style="font-size:18px">2018</span> <br>
-      <span style="font-size:9px">07:00 PM IST</span>
+      August
+      <span style="font-size:16px">2018</span> <br>
+      <span style="font-size:10px">Time:</span> 
+      <span style="font-size:9px">07:00 PM IST</span> <br>
+      <span style="font-size:10px">Venue:</span>
+      <span style="font-size:9px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi, Andhra Pradesh, India.</span>
     </li>
   </ul>
 </div>
