--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@ body {font-family: Verdana, sans-serif;}
     <li class="prev">&#10094;</li>
     <li class="next">&#10095;</li>
     <li>
-      August
-      <span style="font-size:16px">2018</span> <br>
+      23 August, 2018 <br>
       <span style="font-size:10px">Time:</span> 
       <span style="font-size:9px">07:00 PM IST</span> <br>
       <span style="font-size:10px">Venue:</span>
