--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head >
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    
+@media all and (max-width: 1024px)
 <style>
 * {
     box-sizing: border-box;
 }
-
 body {
     margin: 0;
     font-family: Arial;
@@ -68,13 +69,10 @@ body {
     cursor: pointer;
 }
 
-
-
 #myBtn:hover {
     background: #ddd;
     color: black;
 }
-
 
 * {box-sizing: border-box;}
 ul {list-style-type: none;}
