--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ body {font-family: Verdana, sans-serif;}
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <p>"Surveyjana Sukinobavanthu"</p>
   <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
+  <h6> Click on below Wedding Card Buttons</h6>
 </div>
 <!-- The four columns -->
 <div class="row">
