--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body {font-family: Verdana, sans-serif;}
 .weekdays li {
     display: inline-block;
     width: 13.6%;
-    color: #777;
+    color: white;
     text-align: center;
 }
 
