--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ body {font-family: Verdana, sans-serif;}
 .weekdays {
     margin: 0;
     padding: 10px 0;
-    background-color: #100;
+    background-color: red;
 }
 
 .weekdays li {
