--- a/index.html
+++ b/index.html
@@ -109,14 +109,20 @@ body {font-family: Verdana, sans-serif;}
 .weekdays {
     margin: 0;
     padding: 10px 0;
-    background-color: red;
+    background-color: white;
 }
 
 .weekdays li {
     display: inline-block;
     width: 13.6%;
-    color: white;
+    color: black;
     text-align: center;
+}
+   
+.weekdays li .active {
+    padding: 5px;
+    background: #1abc9c;
+    color: red !important
 }
 
 .days {
