--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {font-family: Verdana, sans-serif;}
    
 .weekdays li .active {
     padding: 5px;
-    background: #1abc9c;
+    background: white;
     color: red !important
 }
 
