--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@ body {font-family: Verdana, sans-serif;}
     <li class="next">&#10095;</li>
     <li>
       23 August, 2018 <br>
-      <span style="font-size:10px">Time:</span> 
+      <span style="font-size:10px">*Time:</span> 
       <span style="font-size:9px">07:00 PM IST</span> <br>
-      <span style="font-size:10px">Venue:</span>
-      <span style="font-size:9px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi, Andhra Pradesh, India.</span>
+      <span style="font-size:10px">*Venue:</span>
+      <span style="font-size:9px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi.</span>
     </li>
   </ul>
 </div>
