--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ body {font-family: Verdana, sans-serif;}
       <span style="font-size:10px">*Time:</span> 
       <span style="font-size:9px">07:00 PM IST</span> <br>
       <span style="font-size:10px">*Venue:</span>
-      <span style="font-size:9px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi.</span>
+      <a href="https://goo.gl/maps/4UEh1fbeqN72">
+         <span style="font-size:9px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi.</span>
+      </a>
     </li>
   </ul>
 </div>
