--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@ body {font-family: Verdana, sans-serif;}
     <!--<img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">-->
   </div>
   <div class="column">
-    <img src="/images/SrinuAnu-Best.jpg" alt=" " style="width:70%" onclick="myFunction(this);">
+    <img src="/images/English.jpg" alt=" " style="width:70%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/SrinuAnu-Best-1.jpg" alt=" " style="width:70%" onclick="myFunction(this);">
+    <img src="/images/Telugu.jpg" alt=" " style="width:70%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <p> </p>
