--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body {font-family: Verdana, sans-serif;}
 
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
-  <p>***Sarve Janah Sukhino Bhavanthu***</p>
+  <h6>***Sarve Janah Sukhino Bhavanthu***</h6>
   <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
   <h6> Click on below Wedding Card Buttons</h6>
 </div>
