--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@ body {
 .column {
     float: left;
     width: 25%;
-    padding: 100px;
+    padding: 50px;
 }
 
 /* Style the images inside the grid */
 .column img {
     opacity: 0.8; 
     cursor: pointer; 
+    border-radius: 50%;
 }
 
 .column img:hover {
@@ -177,10 +178,10 @@ body {font-family: Verdana, sans-serif;}
     <!--<img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">-->
   </div>
   <div class="column">
-    <img src="/images/English.jpg" alt=" " style="width:70%" onclick="myFunction(this);">
+    <img src="/images/English.jpg" alt="EnglishInvitation" style="width:70%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="/images/Telugu.jpg" alt=" " style="width:70%" onclick="myFunction(this);">
+    <img src="/images/Telugu.jpg" alt="TeluguInvitation" style="width:70%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <p> </p>
