--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {
 .column img {
     opacity: 0.8; 
     cursor: pointer; 
+    border-radius: 50%;
 }
 
 .column img:hover {
@@ -170,9 +171,13 @@ body {font-family: Verdana, sans-serif;}
   <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
   <h6> Click on below Wedding Card Buttons</h6>
 </div>
-<!-- The four columns -->
+<!-- The five columns -->
 <div class="row">
   <div class="column">
+    <p> </p>
+    <!--<img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">-->
+  </div>  
+   <div class="column">
     <p> </p>
     <!--<img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">-->
   </div>
