--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 /* The grid: Four equal columns that floats next to each other */
 .column {
     float: left;
-    width: 20%;
+    width: 18%;
     padding: 10px;
 }
 
@@ -204,12 +204,12 @@ body {font-family: Verdana, sans-serif;}
     <li class="prev">&#10094;</li>
     <li class="next">&#10095;</li>
     <li>
-      23 August, 2018 <br>
+      23 August, 2018 <br> <br>
       <span style="font-size:10px">*Time:</span> 
-      <span style="font-size:10px">07:00 PM IST</span> <br>
+      <span style="font-size:10px">07:00 PM IST</span> <br><br>
       <span style="font-size:10px">*Venue:</span>
       <a href="https://goo.gl/maps/4UEh1fbeqN72">
-         <span style="font-size:13px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi.</span>
+         <span style="font-size:13px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi.</span><br><br>
       </a>
     </li>
   </ul>
