--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@ body {font-family: Verdana, sans-serif;}
     <!--<img src="/images/shanmuga.nuthalapati.jpg" alt="Nature" style="width:20%" onclick="myFunction(this);">-->
   </div>
   <div class="column">
-    <img src="/images/English.jpg" alt="EnglishInvitation" style="width:40%" onclick="myFunction(this);">
+    <img src="/images/English.jpg" alt="EnglishInvitation" style="width:40%" onclick="myFunction(this);" border="5">
   </div>
   <div class="column">
-    <img src="/images/Telugu.jpg" alt="TeluguInvitation" style="width:40%" onclick="myFunction(this);">
+    <img src="/images/Telugu.jpg" alt="TeluguInvitation" style="width:40%" onclick="myFunction(this);" border="5">
   </div>
   <div class="column">
     <p> </p>
