--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@ body {font-family: Verdana, sans-serif;}
   <li>SAT</li>
   <li>SUN</li>
 </ul>
-
+<div style="text-align:center">
+<img src="/images/bg9.jpeg" alt="Nature" style="width:100%">
+</div>
 <script>
 function myFunction(imgs) {
     var expandImg = document.getElementById("expandedImg");
