--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ body {font-family: Verdana, sans-serif;}
 <div style="text-align:center">
   <h2>Sri Nuthalapati's Wedding Invitation</h2>
   <h6>***Sarve Janah Sukhino Bhavanthu***</h6>
-  <p>Save Earth <img src="/images/earth.gif" alt="Smiley face" align="middle"></p>
+  <p>Save Earth <img src="/images/earth.gif" alt="Smiley face" align="middle" style="width:50%"></p>
   <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
   <h6> Click on below Wedding Card Buttons</h6>
 </div>
