--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body {font-family: Verdana, sans-serif;}
 <body>
 
 <div style="text-align:center">
-  <h2>Sri Nuthalapati's Wedding Invitation</h2>
+  <p>Sri Nuthalapati's <img src="/images/namasthe.gif" alt="Smiley face" align="middle" style="width:10%"> Wedding Invitation</p>
   <h6>***Sarve Janah Sukhino Bhavanthu***</h6>
   <p>Save Earth <img src="/images/earth.gif" alt="Smiley face" align="middle" style="width:3%"></p>
   <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
