--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@ body {font-family: Verdana, sans-serif;}
     
 <div class="month">      
   <ul>
-    <li class="prev">&#10094;</li>
-    <li class="next">&#10095;</li>
+    <!--<li class="prev">&#10094;</li>
+    <li class="next">&#10095;</li>-->
     <li>
       23 August, 2018 <br> <br>
-      <span style="font-size:15px">*Time:</span> 
-      <span style="font-size:15px">07:00 PM IST</span> <br><br>
-      <span style="font-size:15px">*Venue:</span>
+      <span style="font-size:12px">*Time:</span> 
+      <span style="font-size:12px">07:00 PM IST</span> <br><br>
+      <span style="font-size:12px">*Venue:</span>
       <a href="https://goo.gl/maps/4UEh1fbeqN72">
-         <span style="font-size:14px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi.</span><br><br>
+         <span style="font-size:14px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi</span><br><br>
       </a>
     </li>
   </ul>
