--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body {font-family: Verdana, sans-serif;}
 <body>
 
 <div style="text-align:center">
-  <p><b>Sri Nuthalapati's </b><img src="/images/namasthe.gif" alt="Smiley face" align="middle" style="width:8%"> <b>Wedding Invitation</b></p>
+  <p><b>Sri Nuthalapati's </b><img src="/images/namasthe.gif" alt="Smiley face" align="middle" style="width:6%"> <b>Wedding Invitation</b></p>
   <h6>***Sarve Janah Sukhino Bhavanthu***</h6>
   <p>Save Earth <img src="/images/earth.gif" alt="Smiley face" align="middle" style="width:3%"></p>
   <img src="/images/SrinuAnu-Weds.png" alt="Nature" style="width:25%">
@@ -202,15 +202,15 @@ body {font-family: Verdana, sans-serif;}
     
 <div class="month">      
   <ul>
-    <!--<li class="prev">&#10094;</li>
-    <li class="next">&#10095;</li>-->
+    <li class="prev">&#10094;</li>
+    <li class="next">&#10095;</li>
     <li>
       23 August, 2018 <br> <br>
-      <span style="font-size:10px">*Time:</span> 
-      <span style="font-size:10px">07:00 PM IST</span> <br><br>
-      <span style="font-size:10px">*Venue:</span>
+      <span style="font-size:11px">*Time:</span> 
+      <span style="font-size:11px">07:00 PM IST</span> <br><br>
+      <span style="font-size:11px">*Venue:</span>
       <a href="https://goo.gl/maps/4UEh1fbeqN72">
-         <span style="font-size:15px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi</span><br><br>
+         <span style="font-size:17px">PLR Gardens Function Hall, Thanapalli Road, Tirupathi</span><br><br>
       </a>
     </li>
   </ul>
