--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@ body {
     font-family: Arial;
     background-image: url(/images/bg9.jpeg);
     background-repeat:no-repeat;
-    background-position:center; 
-    
+    background-size: cover;
 }
 
 /* The grid: Four equal columns that floats next to each other */
