--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     box-sizing: border-box;
 }
 body {
-    margin: 0;
+    margin: 1;
     font-family: Arial;
     background-image: url(/images/bg9.jpeg);
     background-repeat:no-repeat;
+    background-position:center; 
 }
 
 /* The grid: Four equal columns that floats next to each other */
