--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@ body {
     font-size: 20px;
 }
 
-
+/* Closable button inside the expanded image */
+.closebtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+}
 
 #myBtn:hover {
     background: #ddd;
